[gd_scene load_steps=2 format=3 uid="uid://bmh8ql54hs3vy"]

[ext_resource type="Script" path="res://load_board_ui.gd" id="1_4c88s"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4c88s")

[node name="FilePathTextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 37.0
offset_right = 279.0
offset_bottom = 91.0

[node name="FromFilePathButton" type="Button" parent="."]
layout_mode = 0
offset_left = 298.0
offset_top = 36.0
offset_right = 417.0
offset_bottom = 92.0
text = "load from file"

[node name="JSONTextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 108.0
offset_right = 279.0
offset_bottom = 162.0
pivot_offset = Vector2(-377, 247)

[node name="FromJSONButton" type="Button" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = 109.0
offset_right = 418.0
offset_bottom = 165.0
text = "load from json"

[connection signal="pressed" from="FromFilePathButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="FromJSONButton" to="." method="_on_from_json_button_pressed"]
